[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
rustls-pemfile = "1.0.3"
serde = "1.0.183"
tls-listener = { version = "0.7.0", features = ["hyper-h2", "rt", "rustls", "tokio-net"] }
tokio = { version = "1.30.0", features = ["full"] }
tokio-rustls = "0.24.1"
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }
